--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "ruri-website",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.0.0",
+    "npm": "7.10.0"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start":"node server.js",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+    
   },
   "private": true,
   "dependencies": {
@@ -24,10 +29,13 @@
     "angular-bootstrap-md": "^11.1.0",
     "animate.css": "^4.1.1",
     "chart.js": "^2.5.0",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "ngx-page-scroll": "^7.0.5",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -37,6 +45,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
